@@ -1,4 +1,9 @@
-2005-11-14  noel  <vnoel@cox.net>
+2005-11-14  Vincent Noel  <vnoel@cox.net>
+
+	* logrtns.c (string_get_date_string): Allow parsing logs with
+	dates in the yyyy-mm-dd format (e.g. dpkg.log).
+
+2005-11-14  Vincent Noel  <vnoel@cox.net>
 
 	* logview.c (logview_init): Put the filter bar above the version bar.
 
